--- a/functions/package.json
+++ b/functions/package.json
@@ -14,6 +14,8 @@
   },
   "main": "index.js",
   "dependencies": {
+    "axios": "^1.8.4",
+    "dotenv": "^16.4.7",
     "firebase-admin": "^12.6.0",
     "firebase-functions": "^6.0.1"
   },
